fix: :memo: labelとinputが横一列の場合はalignItems="items-center", inputが何行にもなる場合はalignItems="items-baseline"にする。

--- a/src/resources/sass/component/input/c-image.scss
+++ b/src/resources/sass/component/input/c-image.scss
@@ -1,6 +1,6 @@
 .upload-image-wrap{
-    width: 25%;
-    max-width: 25%;
+    width: calc(25% - 3rem);
+    max-width: calc(25% - 3rem);
     display: flex;
     justify-content: center;
     text-align: center;
